samples/_failures_safe/1761095725_dd2bfe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f7c08db3.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_f7c08db3.c:162:15: error: expected ‘;’ at end of input
  162 |         (*pos)
      |               ^
      |               ;
./samples/SAFE/__tmp_f7c08db3.c:162:9: error: expected declaration or statement at end of input
  162 |         (*pos)
      |         ^
./samples/SAFE/__tmp_f7c08db3.c:162:9: error: expected declaration or statement at end of input
